fix bug of horizontall scroll on mobile

--- a/src/sass/includes/_base.scss
+++ b/src/sass/includes/_base.scss
@@ -6,6 +6,7 @@ body {
   font-family: 'Avenir';
   font-weight: normal;
   font-style: normal;
+  overflow-x: hidden !important;
 }
 
 div {
