--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -177,6 +177,12 @@
       text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 
       font-size: 2em;
+
+      @media screen and (max-width: 400px) {
+        & {
+          font-size: 1.5em;
+        }
+      }
     }
 
     & ul {
@@ -195,6 +201,12 @@
     margin-top: 5.5em;
 
     border-color: white;
+
+    @media screen and (max-width: 400px) {
+      & {
+        margin-top: 3.5em;
+      }
+    }
   }
 }
 
